--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 </head>
 
 <body>
+    <h1>Lorem ipsum dolor sit.</h1>
+    <nav>
+        <ul>
+            <li><a href="#" class="active">Link1</a></li>
+            <li><a href="#">Link2</a></li>
+            <li><a href="#">Link3</a></li>
+
+        </ul>
+    </nav>
+    <p id="first">Lorem ipsum 1, dolor sit amet consectetur adipisicing elit. Porro, necessitatibus.</p>
+    <p>Lorem ipsum 2, dolor sit amet consectetur adipisicing elit. Porro, necessitatibus.</p>
+    <p>Lorem ipsum 3, dolor sit amet consectetur adipisicing elit. Porro, necessitatibus.</p>
+
 
 </body>
 <script src="js/app.js"></script>
