--- a/index.html
+++ b/index.html
@@ -14,18 +14,30 @@
 </head>
 
 <body>
-    <h1>Lorem ipsum dolor sit.</h1>
-    <nav>
-        <ul>
-            <li><a href="#" class="active">Link1</a></li>
-            <li><a href="#">Link2</a></li>
-            <li><a href="#">Link3</a></li>
+    it amet consectetur adipisicing elit. Porro, necessitatibus.</p>
 
-        </ul>
-    </nav>
-    <p id="first">Lorem ipsum 1, dolor sit amet consectetur adipisicing elit. Porro, necessitatibus.</p>
-    <p>Lorem ipsum 2, dolor sit amet consectetur adipisicing elit. Porro, necessitatibus.</p>
-    <p>Lorem ipsum 3, dolor sit amet consectetur adipisicing elit. Porro, necessitatibus.</p>
+
+</body>
+<script src="js/app.js"></script>
+
+</html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Training Sass</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&family=Titillium+Web:wght@200;300;400;600;700;900&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
+    
 
 
 </body>
