--- a/index.html
+++ b/index.html
@@ -4,41 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Training Sass</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Training DOM</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&family=Titillium+Web:wght@200;300;400;600;700;900&display=swap"
         rel="stylesheet">
-</head>
-
-<body>
-    it amet consectetur adipisicing elit. Porro, necessitatibus.</p>
-
-
-</body>
-<script src="js/app.js"></script>
-
-</html>
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Training Sass</title>
+    <script src="https://kit.fontawesome.com/1c572ac95b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&family=Titillium+Web:wght@200;300;400;600;700;900&display=swap"
-        rel="stylesheet">
 </head>
 
-<body>
-    
-
+<body class="light">
+    <div>
+        <h1 class="smack">Good Morning!</h1>
+        <i class="fa-solid fa-moon fa-2xl buzz-out"></i>
+    </div>
 
 </body>
 <script src="js/app.js"></script>
