--- a/index.html
+++ b/index.html
@@ -4,23 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Training DOM</title>
-
+    <title>Task List</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/1c572ac95b.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&family=Titillium+Web:wght@200;300;400;600;700;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&family=Lato:wght@100;400;700&family=Smooch+Sans:wght@100;400;700&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/1c572ac95b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="light">
-    <div>
-        <h1 class="smack">Good Morning!</h1>
-        <i class="fa-solid fa-moon fa-2xl buzz-out"></i>
-    </div>
+<body>
+    <div class="main">
+        <h1>Task List</h1>
+        <div class="alert">
+            Please, insert some text.
+            <i class="fa-solid fa-square-xmark"></i>
+        </div>
+        <form name="new task">
+            <label for="task">
+                <input type="text" name="task" id="task" placeholder="Add a new task">
+                <div class="arrow">
+                    <i class="fa-solid fa-right-long fa-2xl"></i>
+                </div>
 
+            </label>
+        </form>
+        <div class="container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Dont forget to do this</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr id="0">
+
+                        <td><i class="fa-solid fa-circle-check fa-2x"></i><span class="task"
+                                contenteditable="true">Learn HTML!</span></td>
+                        <td> <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-solid fa-pencil fa-stack-1x fa-inverse"></i></span></td>
+                        <td><span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-solid fa-trash fa-stack-1x fa-inverse"></i></span></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
 <script src="js/app.js"></script>
 
