--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
                     <tr id="0">
 
                         <td><i class="fa-solid fa-circle-check fa-2x"></i><span class="task"
-                                contenteditable="true">Learn HTML!</span></td>
+                                contenteditable="true" data-complete="false">Learn HTML!</span></td>
+                        <td> <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-solid fa-pencil fa-stack-1x fa-inverse"></i></span></td>
+                        <td><span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-solid fa-trash fa-stack-1x fa-inverse"></i></span></td>
+                    </tr>
+                    <tr id="1">
+
+                        <td><i class="fa-solid fa-circle-check fa-2x"></i><span class="task"
+                                contenteditable="true" data-complete="true"><del>CSS!</del></span></td>
                         <td> <span class="fa-stack fa-2x">
                                 <i class="fa-solid fa-square fa-stack-2x"></i>
                                 <i class="fa-solid fa-pencil fa-stack-1x fa-inverse"></i></span></td>
